<resources>
    <string name="app_name" translatable="false">FelixDesignTests</string>

    <!-- logIn -->
    <string name="login">Anmelden</string>
    <string name="save_password">Passwort speichern</string>
    <string name="password">Passwort</string>
    <string name="name">Name</string>
    <string name="end_app">Applikation beenden</string>
    <string name="end_app_text">Applikation wirklich beenden?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <!-- Menü -->


    <!-- Dashboard -->
    <string name="hardware"><u>Hardware</u></string>
    <string name="dashboard">Dashboard</string>
    <string name="device">Gerät:</string>
    <string name="cpu">CPU:</string>
    <string name="cpu_speed">CPU Geschwindigkeit:</string>
    <string name="ram_size">RAM:</string>
    <string name="rom_size">ROM:</string>
    <string name="software"><u>Software</u></string>
    <string name="android_version">Android Version:</string>

    <!-- Sensors -->
    <string name="sensor">Sensoren</string>

    <!-- QR-Code -->
    <string name="qr_code_scan">QR-Code scannen</string>
    <string name="result">Ergebnis</string>
    <string name="qr_code_button_text">QR-Code scannen</string>
    <string name="qr_code_camera_text">Scanne den QR-Code</string>

    <!-- NFC Scan -->
    <string name="nfc_scan">NFC Chip scannen</string>

    <!-- Information -->
    <string name="information">Informationen</string>
    <string name="infoText">Diese App wurde von dem Informatikstudenten Felix Hahmann der Hochschule für angewandte Wissenschaften Würzburg-Schweinfurt erstellt.</string>
    <string name="infoStartText">Entwicklungsstart:</string>
    <string name="infoStart">01.03.2017</string>
    <string name="infoEndText">Entwicklungsabschluss:</string>
    <string name="infoEnd">Die App befindet sich noch in Entwicklung</string>

    <!-- Notifications -->
    <string name="notifications">Benachrichtigungen</string>
    <string name="notification_text_hint">Benachrichtigungstext hier eingeben</string>
    <string name="normal_notification_text">Normale Benachrichtigung</string>
    <string name="notification_header">Deine Benachrichtigung</string>
    <string name="info">Info</string>
    <string name="popup_notification_text">Popup Fenster</string>
    <string name="popup_title">Das ist dein Popup</string>
    <string name="ok">Ok</string>
    <string name="snackbar_notification_text">Snackbar</string>

    <!-- Settings -->
    <string name="organisation">Organisation</string>
    <string name="settings">Einstellungen</string>
    <string name="nightmode">Nachtmodus</string>
    <string name="language">Sprache:</string>
    <string name="german">Deutsch</string>
    <string name="english">Englisch</string>

    <!-- LogOut -->
    <string name="logout">Abmelden</string>

    <!-- Sonstiges -->
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>

</resources>
