<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard_id"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_dashboard_black_48px"
            android:checked="true">
        </item>

        <item
            android:id="@+id/sensor_id"
            android:title="@string/sensor"
            android:icon="@drawable/ic_settings_input_antenna_black_48px">
        </item>

        <item
            android:id="@+id/barcode_scan_id"
            android:title="@string/barcode_scan"
            android:icon="@drawable/ic_photo_camera_black_48px">
        </item>

        <item
            android:id="@+id/nfc_scan_id"
            android:title="@string/nfc_scan"
            android:icon="@drawable/ic_nfc_black_48px">
        </item>

        <item
            android:id="@+id/notification"
            android:title="@string/notifications"
            android:icon="@drawable/ic_notifications_active_black_48px">
        </item>

    </group>

    <item
        android:title="@string/information">
        <menu>
            <item
                android:id="@+id/info_id"
                android:title="@string/information"
                android:icon="@drawable/ic_info_black_48px">
            </item>
        </menu>
    </item>



    <item
        android:title="@string/organisation">
        <menu>
            <item
                android:id="@+id/settings_id"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_48px">
            </item>

            <item
                android:id="@+id/logout_id"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout_black_48px">
            </item>
        </menu>
    </item>

</menu>