<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/notification_layout"
    tools:context="com.example.felixhahmann.felixdesigntests.fragments.NotificationsFragment">

    <EditText
        android:id="@+id/notification_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/notification_text_hint"/>

    <Button
        android:id="@+id/normal_notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_notification_text"
        android:layout_below="@id/notification_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/popup_notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_notification_text"
        android:layout_below="@id/normal_notification_button"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/snackbar_notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_notification_text"
        android:layout_below="@id/popup_notification_button"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</RelativeLayout>
