<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.felixhahmann.felixdesigntests.fragments.InfoFragment">

    <ImageView
        android:id="@+id/infoImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/info"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_Text"
        android:text="@string/infoText"
        android:layout_below="@+id/infoImage"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_start_text"
        android:text="@string/infoStartText"
        android:layout_below="@+id/info_Text"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:id="@+id/info_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoStart"
        android:textStyle="italic"
        android:textSize="16dp"
        android:layout_below="@+id/info_start_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_end_text"
        android:text="@string/infoEndText"
        android:layout_below="@+id/info_start"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:id="@+id/info_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoEnd"
        android:textStyle="italic"
        android:textSize="16dp"
        android:layout_below="@+id/info_end_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"/>

</RelativeLayout>
