<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/loginCoordinatorLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white" >

        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/toolbar_layout"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/logo"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/mainboard_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/kNumber"
            android:layout_centerVertical="true"
            android:layout_below="@+id/logo"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/kNumber"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkSavePassword"
            android:layout_below="@id/password"
            android:layout_marginLeft="16dp"
            android:text="@string/save_password"
            android:layout_marginTop="5dp"
            android:checked="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button_login"
            android:layout_below="@+id/chkSavePassword"
            android:layout_alignRight="@+id/logo" />


        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_below="@id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|center"/>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
