<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.felixhahmann.felixdesigntests.fragments.DashboardFragment">

    <TextView
        android:id="@+id/device_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="***"
        android:textStyle="italic"
        android:textSize="16dp"
        android:layout_toRightOf="@id/device_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/cpu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/device_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="***"
        android:textStyle="italic"
        android:textSize="16dp"
        android:layout_toRightOf="@id/cpu_text"
        android:layout_below="@+id/device"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/cpu_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_speed"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/cpu_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/cpu_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="***"
        android:textStyle="italic"
        android:textSize="16dp"
        android:layout_toRightOf="@id/cpu_speed_text"
        android:layout_below="@+id/cpu"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/ram_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ram_size"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/cpu_speed_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/ram_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="***"
        android:textStyle="italic"
        android:textSize="16dp"
        android:layout_toRightOf="@id/ram_size_text"
        android:layout_below="@+id/cpu_speed"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"/>

</RelativeLayout>
